# sarge-launcher

./: .gitignore  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  commands.rs  config.rs  demo.rs  huffman_node.rs  level.rs  lib.rs  master.rs  q3_util.rs  server.rs  shared.rs
src-tauri/src/commands/: client.rs  config.rs  demo.rs  level.rs  master.rs  mods.rs  server.rs  util.rs
src/assets/css/: main.css  shared.css
src/components/: ClientProfile.vue  DemoRow.vue  DropDown.vue  Header.vue  Loading.vue  MasterSettings.vue  Modal.vue  Popup.vue  Q3Config.vue  SargeStatus.vue  ServerRow.vue  Settings.vue  Sidebar.vue
src/composables/: appdata.ts  clickrow.ts  client.ts  config.ts  levelshot.ts  spawnquake.ts  virtualscroll.ts
src/models/: client.ts  config.ts  demo.ts  level.ts  master.ts  server.ts  singleplayer.ts
src/router/: index.ts
src/utils/: util.ts
src/views/: ClientDashboard.vue  ClientSetup.vue  Demo.vue  Home.vue  Resource.vue  Server.vue  SinglePlayer.vue
